--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://neo4j.com/developer/guide-neo4j-browser/",
   "main": "dist/index.html",
   "scripts": {
-    "build": "cross-env NODE_ENV=\"production\" webpack --config ./build_scripts/webpack.config.js",
+    "build": "cross-env NODE_ENV=\"production\" webpack --config ./build_scripts/webpack.config.js && yarn",
     "dev": "jest --watch",
     "e2e": "cypress run",
     "e2e-open": "cypress open",
@@ -33,7 +33,7 @@
     "precommit": "lint-staged",
     "prepare-jar": "node ./scripts/prepare-mvn-package.js",
     "generate-canary-manifest": "node ./scripts/convert-to-canary-manifest.js",
-    "start": "yarn && cross-env NODE_ENV=development webpack-dev-server --colors --config ./build_scripts/webpack.config.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --colors --config ./build_scripts/webpack.config.js",
     "starts": "cross-env NODE_ENV=development webpack-dev-server --https --colors --config ./build_scripts/webpack.config.js",
     "start-prod": "cross-env NODE_ENV=production webpack-dev-server --colors --config ./build_scripts/webpack.config.js",
     "test": "npm run lint && npm run jest",
