--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "yarn": "^1.10",
     "node": "12"
   },
-  "dependencies": {
+  "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-transform-regenerator": "^7.0.0",
@@ -143,7 +143,9 @@
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.10.3",
     "worker-loader": "^2.0.0",
-    "xml2js": "^0.4.19",
+    "xml2js": "^0.4.19"
+  },
+  "dependencies": {
     "@apollo/client": "^3.2.0",
     "@literal-jsx/parser": "^0.1.7",
     "@mdx-js/runtime": "^1.6.1",
